# Obsidian-Quiz-Generator

./: .gitignore  LICENSE  README.md  config.ini_sample  pyproject.toml
backend/: .env_sample  windows_obsidian_quiz.vbs_sample
backend/src/obsidian_quiz/: main.py
backend/src/obsidian_quiz/CLI/: cli.py
backend/src/obsidian_quiz/DAL/: json_quiz_repository.py  openai_service.py
backend/src/obsidian_quiz/DAL/interfaces/: __init__.py  llm_service.py
backend/src/obsidian_quiz/config/: config_loader.py
backend/src/obsidian_quiz/utils/: __init__.py  quiz_parser.py
src/obsidian_quiz/: config_loader.py  main.py
src/obsidian_quiz/CLI/: user_input_handling.py
src/obsidian_quiz/DAL/: __init__.py  json_quiz_repository.py  md_note_repository.py  openai_service.py
src/obsidian_quiz/DAL/interfaces/: __init__.py  note_repository.py  quiz_repository.py
src/obsidian_quiz/UI/: cli.py
src/obsidian_quiz/config/: prompts.py
src/obsidian_quiz/core/: ai_logic.py
src/obsidian_quiz/models/: __init__.py  note.py  quiz.py
src/obsidian_quiz/storage/: quiz_data.json
src/obsidian_quiz/utils/: exception_handling.py  markdown_file_finder.py  note_utils.py  quiz_parser.py  response_parser.py  text_formatting.py  user_input_handling.py
